# doplarr_rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MIGRATING.md  README.md  README_DEVELOPER.md  config.example.toml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  enhancement.yml
.github/workflows/: ci.yml  release.yml
doplarr/: Cargo.toml  build.rs
doplarr/src/: args.rs  config.rs  discord.rs  main.rs
doplarr/src/providers/: api_logging.rs  mod.rs  radarr.rs  seerr.rs  sonarr.rs
radarr_api/: Cargo.toml
radarr_api/src/: lib.rs
radarr_api/src/apis/: alternative_title_api.rs  api_info_api.rs  authentication_api.rs  auto_tagging_api.rs  backup_api.rs  blocklist_api.rs  calendar_api.rs  calendar_feed_api.rs  collection_api.rs  command_api.rs  configuration.rs  credit_api.rs  custom_filter_api.rs  custom_format_api.rs  cutoff_api.rs  delay_profile_api.rs  disk_space_api.rs  download_client_api.rs  download_client_config_api.rs  extra_file_api.rs  file_system_api.rs  health_api.rs  history_api.rs  host_config_api.rs  import_list_api.rs  import_list_config_api.rs  import_list_exclusion_api.rs  import_list_movies_api.rs  indexer_api.rs  indexer_config_api.rs  indexer_flag_api.rs  language_api.rs  localization_api.rs  log_api.rs  log_file_api.rs  manual_import_api.rs  media_cover_api.rs  media_management_config_api.rs  metadata_api.rs  metadata_config_api.rs  (+33 more)
seerr_api/: Cargo.toml
seerr_api/src/: lib.rs
sonarr_api/: Cargo.toml
sonarr_api/src/: commands.rs  lib.rs
(+552 files in other folders)
