[package]
name = "doplarr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde = "1"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
async-trait = "0.1"

# Backend APIs
radarr_api = { path = "../radarr_api" }
sonarr_api = { path = "../sonarr_api" }

# Discord libraries
twilight-http = { version = "0.17", default-features = false, features = [
  "native-tls",
] }
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
twilight-gateway = { version = "0.17", default-features = false, features = [
  "native-tls",
  "twilight-http",
] }
twilight-cache-inmemory = "0.17"
twilight-validate = "0.17"
